# MarsWeatherTracker

./: .gitignore  README.md  app.py  app_utils.py  pyproject.toml  requirements.txt
aws_deployment/: build.sh  samconfig.toml  template.yml
aws_deployment/.aws-sam/: build.toml
local_datasets/: mars_weather_data.csv  mars_weather_data_cleaned.csv
notebooks/: Mars_Weather_Clean_Data.ipynb  Mars_Weather_EDA.ipynb  Model_LSTM.ipynb  Model_SARIMA.ipynb
src/: app.py  app_utils.py  train_model.py
src/assets/: app_style.py
src/aws_lambda/: collect_raw_mars_weather_data.py  collect_raw_mars_weather_data_to_s3.py  save_processed_mars_weather_data.py  save_processed_weather_data_to_rds_table.py
src/aws_rds/: mars_weather_data_rds_database.py  mars_weather_data_table.py
src/data_collectors/: utils.py
src/data_collectors/mars_weather/: curiosity_rover_weather_data_collector.py  nasa_api.py
src/forecasting_models/: forecasting_model_data.py  lstm_forecaster.py  rnn_forecaster.py  torch_forecaster.py
src/utils/: app_utils.py  s3_utils.py
trained_models/: lstm_model_1630335672.pt  rnn_model_1630335376.pt
trained_models/max_gts_temp/: lstm_model_1632058043.pt  rnn_model_1632058024.pt
trained_models/max_temp/: lstm_model_1632050707.pt  rnn_model_1632050719.pt
trained_models/min_gts_temp/: lstm_model_1632058068.pt  rnn_model_1632058079.pt
trained_models/min_temp/: lstm_model_1632050688.pt  lstm_model_architecture_inputs_1632050688.json  rnn_model_1632050665.pt
trained_models/pressure/: lstm_model_1632058112.pt  rnn_model_1632058094.pt
(+5 files in other folders)
