[tool.poetry]
name = "marsweather"
version = "0.1.0"
description = ""
authors = ["aloks97 <alok@lanterne.ai>"]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "2.25.1"
numpy = "^1.20.2"
pandas = "^1.2.4"
boto3 = "^1.17.84"
psycopg2 = "^2.8.6"
SQLAlchemy = "^1.4.17"

[tool.poetry.dev-dependencies]
dash = "^1.20.0"
dash-bootstrap-components = "^0.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
