[tool.poetry]
name = "mars_weather_tracker"
version = "0.1.0"
description = ""
authors = ["suresha <suresha@tcd.ie>"]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "2.25.1"
numpy = "^1.20.2"
pandas = "^1.2.4"
boto3 = "^1.17.84"
psycopg2 = "^2.8.6"
SQLAlchemy = "^1.4.17"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"
sklearn = "^0.0"
torch = "^1.9.0"
torchvision = "^0.10.0"

[tool.poetry.dev-dependencies]
dash = "^1.20.0"
dash-bootstrap-components = "^0.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
